--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "sass": "^1.63.4",
     "web-vitals": "^2.1.4"
   },
