--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
     ]
   },
   "devDependencies": {
-    "create-react-component-folder": "^0.3.7"
+    "create-react-component-folder": "^0.3.7",
+    "@babel/core": "7.22.5",
+    "@babel/eslint-parser": "7.22.5",
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "@babel/preset-env": "7.22.5"
   }
 }
